# Generic-HTPP-Server-in-CPP

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
Demo-Files/: index.html  style.css
Headers/: Errors.hpp  Header.hpp  Server.hpp
Source/: Main.cpp  Server.cpp  Test.cpp  a.out
Web/: index.html
include/: Server.hpp
src/: Main.cpp  Server.cpp
